[package]
name = "compt"
version = "0.2.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "A complete binary tree library in 1d vec layout"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/compt"
keywords = ["tree", "binary"]
readme = "README.md"

[dependencies]
rayon = "1.0.1"
smallvec = "0.6.0"

[dev-dependencies]
rustc-test = "0.3.0"
