[package]
name = "compt"
version = "1.5.6"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "A complete binary tree visitor library"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/compt"
keywords = ["tree", "binary"]
readme = "readme.md"
edition = "2018"

[dependencies]

[dev-dependencies]
rustc-test = "0.3.0"
